# mala

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  mala.yaml  pyproject.toml
.beads/: .gitignore  issues.jsonl  last-touched
.beads/.br_history/: issues.20260429_232253_246003000.jsonl  issues.20260429_232324_833844000.jsonl  issues.20260429_232344_084853000.jsonl  issues.20260429_232404_134269000.jsonl  issues.20260429_232426_013817000.jsonl  issues.20260429_232459_955125000.jsonl  issues.20260429_232550_133111000.jsonl  issues.20260429_232638_795046000.jsonl  issues.20260429_232727_306738000.jsonl  issues.20260429_232802_038100000.jsonl  issues.20260429_232846_103943000.jsonl  issues.20260429_232930_609150000.jsonl  issues.20260429_233033_129632000.jsonl  issues.20260429_233115_547753000.jsonl  issues.20260429_233138_906019000.jsonl  issues.20260429_233203_843992000.jsonl  issues.20260429_233238_761032000.jsonl  issues.20260429_233248_026340000.jsonl  issues.20260429_233248_112685000.jsonl  issues.20260429_233248_199790000.jsonl  issues.20260429_233248_285591000.jsonl  issues.20260429_233248_372960000.jsonl  issues.20260429_233248_468159000.jsonl  issues.20260429_233248_555278000.jsonl  issues.20260429_233248_655059000.jsonl  issues.20260429_233248_744610000.jsonl  issues.20260429_233248_844214000.jsonl  issues.20260429_233248_937174000.jsonl  issues.20260429_233249_029306000.jsonl  issues.20260429_233249_125197000.jsonl  issues.20260429_233249_226439000.jsonl  issues.20260429_233249_317992000.jsonl  issues.20260429_233249_416799000.jsonl  issues.20260429_233249_513029000.jsonl  issues.20260429_233249_606421000.jsonl  issues.20260429_233249_719007000.jsonl  issues.20260429_233249_837002000.jsonl  issues.20260429_233249_955723000.jsonl  issues.20260429_233250_059009000.jsonl  issues.20260429_233250_160653000.jsonl  (+116 more)
.github/workflows/: amp-smoke.yml
.mala-cache/: lint_cache.json
commands/: bd-breakdown.md
docs/: 2026-01-01-architecture-refactor-plan.md  2026-01-01-architecture-review.md  2026-05-11-cerberus-v2-upgrade-plan.md  architecture.md  cerberus-review-plan.md  cli-reference.md  configuration.md  coordination-plan-codex.md  development.md  epic-verification-agent.md  import-linter-restructure-proposal.md  project-config.md  quality-hardening-plan.md  subprocess-watchdog-plan.md  validation-triggers.md  validation.md  workstream-a-execution-record.md
plans/: 2026-01-03-context-exhaustion-handling.md  2026-01-03-deadlock-handling-skeleton.md  2026-01-05-watch-mode-plan.md  2026-01-07-agent-sdk-reviewer-plan.md  2026-01-07-validation-triggers-tasks.md  2026-01-18-epic-verification-reviewer-choice-plan.md  2026-01-18-epic-verification-reviewer-choice-spec.md  2026-04-29-amp-provider-plan.md  2026-05-07-codex-provider-plan.md  2026-05-09-architecture-fixes-plan.md  2026-05-09-evidence-check-redesign.md
plugins/amp/: README.md  mala-safety.test.ts  mala-safety.ts  package.json
scripts/: lock-holder.sh  lock-release.sh  lock-try.sh
src/: __init__.py  agent_loop.py  anthropic_client.py  beads_client.py  braintrust_integration.py  cerberus_review.py  cli.py  cli_support.py  codex_review.py  config.py  epic_verifier.py  event_sink.py  event_sink_console.py  filelock.py  git_utils.py  handoff.py  hooks.py  implementer_prompt.md  issue_manager.py  lifecycle.py  log_events.py  main.py  mcp.py  models.py  orchestrator.py  orchestrator_factory.py  orchestrator_types.py  prompts.py  protocols.py  quality_gate.py  session_log_parser.py  telemetry.py  validation.py
src/cli/: cli.py  logs.py
src/core/: constants.py  log_events.py  models.py  protocols.py  session_end_result.py  tool_names.py
src/domain/: __init__.py  deadlock.py  evidence_check.py  lifecycle.py  prompts.py  quality_gate.py  session_end_result.py  validation_wrapper.py
src/hooks/: __init__.py  dangerous_commands.py  file_cache.py  lint_cache.py  locking.py
src/infra/: __init__.py  agent_runtime.py  epic_scope.py  epic_verifier.py  git_utils.py  issue_manager.py  mcp.py  sdk_adapter.py  sdk_transport.py  sigint_guard.py  telemetry.py  tool_config.py  tool_name_extractor.py
src/log_output/: __init__.py  console.py  run_metadata.py
src/logging/: console.py  jsonl.py  run_metadata.py
src/orchestration/: cli_options.py  cli_overrides.py  cli_support.py  config_resolution.py  deadlock_handler.py  dry_run.py  factory.py  gate_metadata.py  init_config.py  orchestration_wiring.py  orchestrator.py  orchestrator_state.py  prompts.py  review_tracking.py  run_command.py  run_config.py  runtime_deps.py  types.py
src/pipeline/: __init__.py  agent_session_runner.py  config_views.py  context_pressure_handler.py  cumulative_review_runner.py  epic_verification_coordinator.py  fixer_interface.py  fixer_service.py  gate_metadata.py  gate_runner.py  idle_retry_policy.py  issue_decision.py  issue_execution_coordinator.py  issue_execution_plan.py  issue_finalizer.py  issue_result.py  lifecycle_effect_handler.py  message_stream_processor.py  review_formatter.py  review_runner.py  review_tracking.py  run_coordinator.py  run_validation_state.py  session_callback_factory.py  session_end_result.py  trigger_plan.py  (+2 more)
tests/: README.md  claude_auth.py  conftest.py  mock_mcp_server.py  test_agent_runtime.py  test_agent_session_runner.py  test_beads_client.py  test_braintrust_integration.py  test_cerberus_gate_cli.py  test_cerberus_review.py  test_cli.py  test_code_pattern_matcher.py  test_codex_review.py  test_command_runner.py  test_config.py  test_config_loader.py  test_config_merger.py  test_context_pressure_handler.py  test_coverage.py  test_deps_sync.py  test_domain_prompts.py  test_e2e.py  test_epic_scope.py  test_epic_verification_retry.py  test_epic_verifier.py  test_epic_verifier_sdk_e2e.py  test_event_sink.py  test_gate_runner.py  test_git_utils.py  test_handoff.py  test_hooks.py  test_issue_execution_coordinator.py  test_issue_manager.py  test_lazy_imports.py  test_lifecycle.py  test_lint_cache.py  test_lock_integration.py  test_lock_scripts.py  test_lock_sdk_integration.py  test_locking_key.py  (+26 more)
(+513 files in other folders)
