[project]
name = "mala"
version = "0.1.0"
description = "Agent SDK orchestrator for parallel issue processing"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "typer>=0.9.0",
    "braintrust>=0.0.180",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mala = "src.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["src/scripts/*.sh"]

[tool.ty.environment]
root = ["."]

[tool.ty.rules]
# Set all ty rules to error level for strictest checking
possibly-unresolved-reference = "error"
unresolved-reference = "error"
unresolved-import = "error"
invalid-type-form = "error"
invalid-type-variable-constraints = "error"
invalid-legacy-type-variable = "error"
invalid-syntax-in-forward-annotation = "error"
invalid-attribute-access = "error"
invalid-assignment = "error"
invalid-declaration = "error"
invalid-parameter-default = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
unresolved-attribute = "error"
missing-argument = "error"
too-many-positional-arguments = "error"
unknown-argument = "error"
parameter-already-assigned = "error"
conflicting-declarations = "error"
conflicting-metaclass = "error"
cyclic-class-definition = "error"
duplicate-base = "error"
inconsistent-mro = "error"
invalid-base = "error"
unsupported-base = "error"
unsupported-operator = "error"
not-iterable = "error"
non-subscriptable = "error"
invalid-context-manager = "error"
invalid-raise = "error"
invalid-exception-caught = "error"
call-non-callable = "error"
invalid-overload = "error"
invalid-super-argument = "error"

[tool.ruff.lint]
extend-select = [
    "ANN",   # flake8-annotations - require type annotations
    "TCH",   # flake8-type-checking - proper TYPE_CHECKING imports
    "PYI",   # flake8-pyi - type stub best practices
    "UP",    # pyupgrade - modern type syntax
    "FA",    # flake8-future-annotations - use future annotations
    "RUF",   # Ruff-specific rules including type issues
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-none-returning = false
suppress-dummy-args = false
mypy-init-return = true

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = []
runtime-evaluated-decorators = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Minimal output flags to reduce token usage:
# -q: quiet mode (only failures + summary)
# --tb=short: shorter tracebacks
# --no-header: skip header
# --disable-warnings: hide warnings
addopts = "-m 'unit or integration' -q --tb=short --no-header --disable-warnings"
markers = [
    "unit: fast, isolated tests (default)",
    "integration: tests that exercise multiple components or real tools locally",
    "e2e: end-to-end tests that require real CLI/API auth",
    "morph: marks tests requiring MORPH_API_KEY",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-rerunfailures>=16.1",
    "pytest-xdist>=3.8.0",
    "import-linter>=2.0",
]

# =============================================================================
# Import Linter Configuration
# =============================================================================
# Enforces architectural boundaries between layers.
# Run with: uvx import-linter
#
# Architecture:
#   cli -> orchestration -> pipeline -> domain -> infra
#
# Infra is NOT layered - it's a flat set of utility modules that can
# cross-import. The layered contract only enforces that higher layers
# don't import from lower, not within-layer constraints.
# =============================================================================

[tool.importlinter]
root_packages = ["src"]
include_external_packages = true

# -----------------------------------------------------------------------------
# Contract 1: CLI cannot bypass orchestration
# -----------------------------------------------------------------------------
# CLI should not reach into pipeline/domain/infra directly.
# All behavior routed through the orchestration layer.

[[tool.importlinter.contracts]]
name = "CLI only depends on orchestrator"
type = "forbidden"
source_modules = [
    "src.cli",
    "src.main",
]
forbidden_modules = [
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.protocols",
    "src.epic_verifier",
    "src.tools",
    "src.log_output",
]
# Allow indirect imports through orchestration layer (e.g., cli -> cli_support -> tools)
allow_indirect_imports = true

# -----------------------------------------------------------------------------
# Contract 2: Domain Independence from Upper Layers
# -----------------------------------------------------------------------------
# Core domain modules must not depend on orchestration or CLI.

[[tool.importlinter.contracts]]
name = "Domain layer independence"
type = "forbidden"
source_modules = [
    "src.lifecycle",
    "src.models",
    "src.quality_gate",
    "src.validation",
    "src.prompts",
]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
]

# -----------------------------------------------------------------------------
# Contract 3: Pipeline Independence from CLI/Orchestration
# -----------------------------------------------------------------------------
# Pipeline modules should not import from orchestration layer.

[[tool.importlinter.contracts]]
name = "Pipeline independence"
type = "forbidden"
source_modules = ["src.pipeline"]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
]

# -----------------------------------------------------------------------------
# Contract 4: No circular imports within pipeline
# -----------------------------------------------------------------------------

[[tool.importlinter.contracts]]
name = "Pipeline modules acyclic"
type = "independence"
modules = [
    "src.pipeline.agent_session_runner",
    "src.pipeline.gate_runner",
    "src.pipeline.review_runner",
    "src.pipeline.run_coordinator",
]

# -----------------------------------------------------------------------------
# Contract 5: SDK confined to infra
# -----------------------------------------------------------------------------
# External SDKs should only be imported in infrastructure layer.

[[tool.importlinter.contracts]]
name = "SDK confined to infra"
type = "forbidden"
source_modules = [
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.prompts",
]
forbidden_modules = [
    "anthropic",
    "braintrust",
]

# -----------------------------------------------------------------------------
# Contract 6: Only CLI imports typer
# -----------------------------------------------------------------------------
# typer is only for CLI argument parsing.

[[tool.importlinter.contracts]]
name = "Only CLI imports typer"
type = "forbidden"
source_modules = [
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.protocols",
    "src.log_events",
    "src.epic_verifier",
    "src.tools",
]
forbidden_modules = ["typer"]

# -----------------------------------------------------------------------------
# Contract 7: Hooks isolated from upper layers
# -----------------------------------------------------------------------------
# Hook modules should not import from pipeline/domain/orchestration layers.

[[tool.importlinter.contracts]]
name = "Hooks isolated"
type = "forbidden"
source_modules = ["src.hooks"]
forbidden_modules = [
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.prompts",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
]

# -----------------------------------------------------------------------------
# Contract 8: Infra cannot import from upper layers
# -----------------------------------------------------------------------------
# Infrastructure modules should not depend on orchestration, pipeline, or CLI.

[[tool.importlinter.contracts]]
name = "Infra independence"
type = "forbidden"
source_modules = [
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.protocols",
    "src.log_events",
    "src.epic_verifier",
    "src.tools",
    "src.issue_manager",
]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
]
