[project]
name = "mala"
version = "0.1.0"
description = "Agent SDK orchestrator for parallel issue processing"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "typer>=0.9.0",
    "braintrust>=0.0.180",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mala = "src.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["src/scripts/*.sh"]

[tool.ty.environment]
root = ["."]

[tool.ty.rules]
# Set all ty rules to error level for strictest checking
possibly-unresolved-reference = "error"
unresolved-reference = "error"
unresolved-import = "error"
invalid-type-form = "error"
invalid-type-variable-constraints = "error"
invalid-legacy-type-variable = "error"
invalid-syntax-in-forward-annotation = "error"
invalid-attribute-access = "error"
invalid-assignment = "error"
invalid-declaration = "error"
invalid-parameter-default = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
unresolved-attribute = "error"
missing-argument = "error"
too-many-positional-arguments = "error"
unknown-argument = "error"
parameter-already-assigned = "error"
conflicting-declarations = "error"
conflicting-metaclass = "error"
cyclic-class-definition = "error"
duplicate-base = "error"
inconsistent-mro = "error"
invalid-base = "error"
unsupported-base = "error"
unsupported-operator = "error"
not-iterable = "error"
non-subscriptable = "error"
invalid-context-manager = "error"
invalid-raise = "error"
invalid-exception-caught = "error"
call-non-callable = "error"
invalid-overload = "error"
invalid-super-argument = "error"

[tool.ruff.lint]
extend-select = [
    "ANN",   # flake8-annotations - require type annotations
    "TCH",   # flake8-type-checking - proper TYPE_CHECKING imports
    "PYI",   # flake8-pyi - type stub best practices
    "UP",    # pyupgrade - modern type syntax
    "FA",    # flake8-future-annotations - use future annotations
    "RUF",   # Ruff-specific rules including type issues
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-none-returning = false
suppress-dummy-args = false
mypy-init-return = true

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = []
runtime-evaluated-decorators = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Minimal output flags to reduce token usage:
# -q: quiet mode (only failures + summary)
# --tb=short: shorter tracebacks
# --no-header: skip header
# --disable-warnings: hide warnings
addopts = "-m 'unit or integration' -q --tb=short --no-header --disable-warnings"
markers = [
    "unit: fast, isolated tests (default)",
    "integration: tests that exercise multiple components or real tools locally",
    "e2e: end-to-end tests that require real CLI/API auth",
    "morph: marks tests requiring MORPH_API_KEY",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-rerunfailures>=16.1",
    "pytest-xdist>=3.8.0",
    "import-linter>=2.0",
]

# =============================================================================
# Import Linter Configuration
# =============================================================================
# Enforces architectural boundaries between layers.
# Run with: uvx import-linter
#
# Architecture:
#   cli -> orchestration -> pipeline -> domain -> infra
#
# Infra is NOT layered - it's a flat set of utility modules that can
# cross-import. The layered contract only enforces that higher layers
# don't import from lower, not within-layer constraints.
# =============================================================================

[tool.importlinter]
root_packages = ["src"]
include_external_packages = true

# -----------------------------------------------------------------------------
# Contract 1: CLI cannot bypass orchestration
# -----------------------------------------------------------------------------
# CLI should not reach into pipeline/domain/infra directly.
# All behavior routed through the orchestration layer.

[[tool.importlinter.contracts]]
name = "CLI only depends on orchestrator"
type = "forbidden"
source_modules = [
    "src.cli",
    "src.main",
]
forbidden_modules = [
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.core.models",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.protocols",
    "src.core.protocols",
    "src.epic_verifier",
    "src.tools",
    "src.log_output",
    "src.event_sink",
    "src.log_events",
    "src.core.log_events",
    "src.issue_manager",
    # Note: src.config is allowed - CLI reads mala.toml configuration
]
# Allow indirect imports through orchestration layer (e.g., cli -> cli_support -> tools)
allow_indirect_imports = true

# -----------------------------------------------------------------------------
# Contract 2: Domain Independence from Upper Layers
# -----------------------------------------------------------------------------
# Core domain modules must not depend on orchestration or CLI.

[[tool.importlinter.contracts]]
name = "Domain layer independence"
type = "forbidden"
source_modules = [
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.prompts",
    # Note: src.models has its own stricter "Models is leaf" contract
]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
]

# -----------------------------------------------------------------------------
# Contract 3: Pipeline Independence from CLI/Orchestration
# -----------------------------------------------------------------------------
# Pipeline modules should not import from orchestration layer.

[[tool.importlinter.contracts]]
name = "Pipeline independence"
type = "forbidden"
source_modules = ["src.pipeline"]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
]

# -----------------------------------------------------------------------------
# Contract 4: No circular imports within pipeline
# -----------------------------------------------------------------------------

[[tool.importlinter.contracts]]
name = "Pipeline modules acyclic"
type = "independence"
modules = [
    "src.pipeline.agent_session_runner",
    "src.pipeline.gate_runner",
    "src.pipeline.review_runner",
    "src.pipeline.run_coordinator",
]

# -----------------------------------------------------------------------------
# Contract 5: SDK confined to infra
# -----------------------------------------------------------------------------
# Domain and pipeline layers should not directly import external SDKs.
# They should use abstractions/protocols instead.
# Note: CLI/orchestration are allowed to import SDK wrappers (anthropic_client,
# braintrust_integration) which in turn import the SDKs.

[[tool.importlinter.contracts]]
name = "SDK confined to infra"
type = "forbidden"
source_modules = [
    # Pipeline layer
    "src.pipeline",
    # Domain layer
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.prompts",
]
forbidden_modules = [
    "anthropic",
    "braintrust",
    "src.anthropic_client",
    "src.braintrust_integration",
]

# -----------------------------------------------------------------------------
# Contract 6: Only CLI imports typer
# -----------------------------------------------------------------------------
# typer is only for CLI argument parsing.

[[tool.importlinter.contracts]]
name = "Only CLI imports typer"
type = "forbidden"
source_modules = [
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.core.models",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.protocols",
    "src.core.protocols",
    "src.log_events",
    "src.core.log_events",
    "src.epic_verifier",
    "src.tools",
    "src.core",
]
forbidden_modules = ["typer"]

# -----------------------------------------------------------------------------
# Contract 7: Hooks isolated from upper layers
# -----------------------------------------------------------------------------
# Hook modules should not import from pipeline/domain/orchestration layers.

[[tool.importlinter.contracts]]
name = "Hooks isolated"
type = "forbidden"
source_modules = ["src.hooks"]
forbidden_modules = [
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.models",
    "src.prompts",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
]

# -----------------------------------------------------------------------------
# Contract 8: Infra cannot import from upper layers
# -----------------------------------------------------------------------------
# Infrastructure modules should not depend on orchestration, pipeline, or CLI.

[[tool.importlinter.contracts]]
name = "Infra independence"
type = "forbidden"
source_modules = [
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.protocols",
    "src.core.protocols",
    "src.log_events",
    "src.core.log_events",
    "src.epic_verifier",
    "src.tools",
    "src.issue_manager",
    "src.core",
    "src.core.models",
]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
]

# -----------------------------------------------------------------------------
# Contract 9: Models is a leaf module
# -----------------------------------------------------------------------------
# Models should only contain data classes with no business logic dependencies.
# This keeps models portable and prevents circular dependencies.

[[tool.importlinter.contracts]]
name = "Models is leaf"
type = "forbidden"
source_modules = ["src.models", "src.core.models"]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.protocols",
    "src.core.protocols",
    "src.log_events",
    "src.core.log_events",
    "src.epic_verifier",
    "src.tools",
    "src.issue_manager",
]

# -----------------------------------------------------------------------------
# Contract 10: Protocols is a leaf module
# -----------------------------------------------------------------------------
# Protocols define interfaces only - no implementations or dependencies.

[[tool.importlinter.contracts]]
name = "Protocols is leaf"
type = "forbidden"
source_modules = ["src.protocols", "src.core.protocols"]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.log_events",
    "src.core.log_events",
    "src.epic_verifier",
    "src.tools",
    "src.issue_manager",
    "src.models",
    "src.core.models",
]

# -----------------------------------------------------------------------------
# Contract 11: Log events is a leaf module
# -----------------------------------------------------------------------------
# Log events are pure data structures for event types.

[[tool.importlinter.contracts]]
name = "Log events is leaf"
type = "forbidden"
source_modules = ["src.log_events", "src.core.log_events"]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.protocols",
    "src.core.protocols",
    "src.epic_verifier",
    "src.tools",
    "src.issue_manager",
    "src.models",
    "src.core.models",
]

# -----------------------------------------------------------------------------
# Contract 12: Telemetry abstraction is pure
# -----------------------------------------------------------------------------
# Telemetry module should only contain protocols and null implementations.
# Concrete implementations (Braintrust) are in separate modules.

[[tool.importlinter.contracts]]
name = "Telemetry abstraction pure"
type = "forbidden"
source_modules = ["src.telemetry"]
forbidden_modules = [
    "src.braintrust_integration",
    "braintrust",
]

# -----------------------------------------------------------------------------
# Contract 13: Tools is foundational
# -----------------------------------------------------------------------------
# Tools module provides low-level utilities and should not import
# domain or business logic modules.

[[tool.importlinter.contracts]]
name = "Tools is foundational"
type = "forbidden"
source_modules = ["src.tools"]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.config",
    "src.protocols",
    "src.core.protocols",
    "src.log_events",
    "src.core.log_events",
    "src.epic_verifier",
    "src.models",
    "src.core.models",
    "src.issue_manager",
    "src.core",
]

# -----------------------------------------------------------------------------
# Contract 14: Validation result is leaf-like
# -----------------------------------------------------------------------------
# Validation result should not directly import heavy dependencies.
# TYPE_CHECKING imports for type annotations are allowed via indirect imports.

[[tool.importlinter.contracts]]
name = "Validation result minimal"
type = "forbidden"
source_modules = ["src.validation.result"]
forbidden_modules = [
    "src.tools",
    "src.config",
    "src.log_output",
]
allow_indirect_imports = true

# -----------------------------------------------------------------------------
# Contract 15: Config is foundational
# -----------------------------------------------------------------------------
# Config should only read configuration, not import business logic.

[[tool.importlinter.contracts]]
name = "Config is foundational"
type = "forbidden"
source_modules = ["src.config"]
forbidden_modules = [
    "src.cli",
    "src.main",
    "src.orchestrator",
    "src.orchestrator_factory",
    "src.orchestrator_types",
    "src.cli_support",
    "src.pipeline",
    "src.lifecycle",
    "src.quality_gate",
    "src.validation",
    "src.prompts",
    "src.beads_client",
    "src.cerberus_review",
    "src.mcp",
    "src.hooks",
    "src.log_output",
    "src.event_sink",
    "src.session_log_parser",
    "src.anthropic_client",
    "src.braintrust_integration",
    "src.telemetry",
    "src.git_utils",
    "src.protocols",
    "src.core.protocols",
    "src.log_events",
    "src.core.log_events",
    "src.epic_verifier",
    "src.models",
    "src.core.models",
    "src.tools",
    "src.issue_manager",
    "src.core",
]
