[project]
name = "mala"
version = "0.1.0"
description = "Agent SDK orchestrator for parallel issue processing"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "typer>=0.9.0",
    "braintrust>=0.0.180",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
mala = "src.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["src/scripts/*.sh"]
include = ["src/domain/validation/presets/*.yaml"]

[tool.ty.environment]
root = ["."]

[tool.ty.rules]
# Set all ty rules to error level for strictest checking
possibly-unresolved-reference = "error"
unresolved-reference = "error"
unresolved-import = "error"
invalid-type-form = "error"
invalid-type-variable-constraints = "error"
invalid-legacy-type-variable = "error"
invalid-syntax-in-forward-annotation = "error"
invalid-attribute-access = "error"
invalid-assignment = "error"
invalid-declaration = "error"
invalid-parameter-default = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
unresolved-attribute = "error"
missing-argument = "error"
too-many-positional-arguments = "error"
unknown-argument = "error"
parameter-already-assigned = "error"
conflicting-declarations = "error"
conflicting-metaclass = "error"
cyclic-class-definition = "error"
duplicate-base = "error"
inconsistent-mro = "error"
invalid-base = "error"
unsupported-base = "error"
unsupported-operator = "error"
not-iterable = "error"
non-subscriptable = "error"
invalid-context-manager = "error"
invalid-raise = "error"
invalid-exception-caught = "error"
call-non-callable = "error"
invalid-overload = "error"
invalid-super-argument = "error"

[tool.ruff.lint]
extend-select = [
    "ANN",   # flake8-annotations - require type annotations
    "TCH",   # flake8-type-checking - proper TYPE_CHECKING imports
    "PYI",   # flake8-pyi - type stub best practices
    "UP",    # pyupgrade - modern type syntax
    "FA",    # flake8-future-annotations - use future annotations
    "RUF",   # Ruff-specific rules including type issues
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-none-returning = false
suppress-dummy-args = false
mypy-init-return = true

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = []
runtime-evaluated-decorators = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Minimal output flags to reduce token usage:
# -q: quiet mode (only failures + summary)
# --tb=short: shorter tracebacks
# --no-header: skip header
# --disable-warnings: hide warnings
addopts = "-m 'unit or integration' -q --tb=short --no-header --disable-warnings"
markers = [
    "unit: fast, isolated tests (default)",
    "integration: tests that exercise multiple components or real tools locally",
    "e2e: end-to-end tests that require real CLI/API auth",
    "morph: marks tests requiring MORPH_API_KEY",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-rerunfailures>=16.1",
    "pytest-xdist>=3.8.0",
    "import-linter>=2.0",
]

# =============================================================================
# Import Linter Configuration
# =============================================================================
# Enforces architectural boundaries between layers.
# Run with: uv run import-linter
#
# Architecture:
#   cli -> orchestration -> pipeline -> domain -> infra -> core
#
# This simplified configuration uses 10 contracts:
# 1. Layered Architecture (layers type) - enforces layer ordering
# 2-3. SDK/Typer confinement - external packages restricted to specific layers
# 4. Pipeline acyclic - independence within pipeline
# 5-7. Special isolation (hooks, telemetry, validation.result)
# 8-10. Leaf modules (models, protocols, log_events) - no src imports
# =============================================================================

[tool.importlinter]
root_packages = ["src"]
include_external_packages = true

# -----------------------------------------------------------------------------
# Contract 1: Layered Architecture
# -----------------------------------------------------------------------------
# Enforces that higher layers cannot import from lower layers.
# This replaces most of the old layer-specific contracts.

[[tool.importlinter.contracts]]
name = "Layered Architecture"
type = "layers"
layers = [
    "src.cli",
    "src.orchestration",
    "src.pipeline",
    "src.domain",
    "src.infra",
    "src.core",
]

# -----------------------------------------------------------------------------
# Contract 2: SDK confined to infra
# -----------------------------------------------------------------------------
# External SDKs (anthropic, braintrust) and their wrappers should only be
# imported by CLI/orchestration/infra layers. Pipeline/domain/core cannot
# import either SDKs or their wrappers directly.

[[tool.importlinter.contracts]]
name = "SDK confined to infra"
type = "forbidden"
source_modules = [
    "src.pipeline",
    "src.domain",
    "src.core",
]
forbidden_modules = [
    "anthropic",
    "braintrust",
    "src.infra.clients.anthropic_client",
    "src.infra.clients.braintrust_integration",
]

# -----------------------------------------------------------------------------
# Contract 2b: CLI/Orchestration use SDK through wrappers only
# -----------------------------------------------------------------------------
# CLI and orchestration can use SDK wrappers but should not directly import
# the raw SDK packages. This is a future goal - currently cli imports
# braintrust directly for setup.
# NOTE: Currently disabled as cli.cli imports braintrust.wrappers directly.
# Uncomment when code is refactored to use only infra wrappers.
# [[tool.importlinter.contracts]]
# name = "CLI uses SDK through wrappers"
# type = "forbidden"
# source_modules = ["src.cli", "src.orchestration"]
# forbidden_modules = ["anthropic", "braintrust"]

# -----------------------------------------------------------------------------
# Contract 3: Only CLI imports typer
# -----------------------------------------------------------------------------
# typer is only for CLI argument parsing.

[[tool.importlinter.contracts]]
name = "Only CLI imports typer"
type = "forbidden"
source_modules = [
    "src.orchestration",
    "src.pipeline",
    "src.domain",
    "src.infra",
    "src.core",
]
forbidden_modules = ["typer"]

# -----------------------------------------------------------------------------
# Contract 4: Pipeline modules acyclic
# -----------------------------------------------------------------------------
# No circular imports within pipeline modules.

[[tool.importlinter.contracts]]
name = "Pipeline modules acyclic"
type = "independence"
modules = [
    "src.pipeline.agent_session_runner",
    "src.pipeline.gate_runner",
    "src.pipeline.review_runner",
    "src.pipeline.run_coordinator",
]

# -----------------------------------------------------------------------------
# Contract 5: Hooks isolated
# -----------------------------------------------------------------------------
# Hook modules should not import from pipeline/domain/orchestration layers.
# Also cannot import from core.models (per P2 review feedback).

[[tool.importlinter.contracts]]
name = "Hooks isolated"
type = "forbidden"
source_modules = ["src.infra.hooks"]
forbidden_modules = [
    "src.pipeline",
    "src.domain",
    "src.orchestration",
    "src.core.models",
]

# -----------------------------------------------------------------------------
# Contract 6: Telemetry abstraction pure
# -----------------------------------------------------------------------------
# Telemetry module should only contain protocols and null implementations.
# Concrete implementations (Braintrust) are in separate modules.

[[tool.importlinter.contracts]]
name = "Telemetry abstraction pure"
type = "forbidden"
source_modules = ["src.infra.telemetry"]
forbidden_modules = [
    "src.infra.clients.braintrust_integration",
    "braintrust",
]

# -----------------------------------------------------------------------------
# Contract 7: Validation result minimal
# -----------------------------------------------------------------------------
# Validation result should not directly import heavy dependencies.
# Layers would allow domain->infra, but this needs stricter isolation.
# TYPE_CHECKING imports for type annotations are allowed via indirect imports.

[[tool.importlinter.contracts]]
name = "Validation result minimal"
type = "forbidden"
source_modules = ["src.domain.validation.result"]
forbidden_modules = [
    "src.infra.tools",
    "src.infra.io.config",
    "src.infra.io.log_output",
]
allow_indirect_imports = true

# -----------------------------------------------------------------------------
# Contract 8: Models is leaf
# -----------------------------------------------------------------------------
# Models should only contain data classes with no internal dependencies.
# Leaf modules: constraint is no-src-imports (stdlib is allowed).

[[tool.importlinter.contracts]]
name = "Models is leaf"
type = "forbidden"
source_modules = ["src.core.models"]
forbidden_modules = [
    "src.cli",
    "src.orchestration",
    "src.pipeline",
    "src.domain",
    "src.infra",
    "src.core.protocols",
    "src.core.log_events",
]

# -----------------------------------------------------------------------------
# Contract 9: Protocols is leaf
# -----------------------------------------------------------------------------
# Protocols define interfaces only - no implementations.
# Leaf modules: constraint is no-src-imports (stdlib is allowed).

[[tool.importlinter.contracts]]
name = "Protocols is leaf"
type = "forbidden"
source_modules = ["src.core.protocols"]
forbidden_modules = [
    "src.cli",
    "src.orchestration",
    "src.pipeline",
    "src.domain",
    "src.infra",
    "src.core.models",
    "src.core.log_events",
]

# -----------------------------------------------------------------------------
# Contract 10: Log events is leaf
# -----------------------------------------------------------------------------
# Log events are pure data structures.
# Leaf modules: constraint is no-src-imports (stdlib is allowed).

[[tool.importlinter.contracts]]
name = "Log events is leaf"
type = "forbidden"
source_modules = ["src.core.log_events"]
forbidden_modules = [
    "src.cli",
    "src.orchestration",
    "src.pipeline",
    "src.domain",
    "src.infra",
    "src.core.models",
    "src.core.protocols",
]
